--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@capacitor/core": "^5.5.1",
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
     "@microsoft/microsoft-graph-client": "^3.0.7",
@@ -46,6 +47,7 @@
     "yup": "^1.2.0"
   },
   "devDependencies": {
+    "@capacitor/cli": "^5.5.1",
     "@types/jest": "^29.5.3",
     "@types/next-auth": "^3.15.0",
     "encoding": "^0.1.13",
