--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@capacitor-community/text-to-speech": "^3.0.1",
     "@capacitor/core": "^5.5.1",
+    "@capacitor/ios": "^5.5.1",
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
     "@microsoft/microsoft-graph-client": "^3.0.7",
@@ -34,6 +35,7 @@
     "mathquill": "^0.10.1-a",
     "next": "13.4.16",
     "next-auth": "^4.24.4",
+    "next-export-i18n": "^2.1.0",
     "next-i18next": "^14.0.0",
     "next-themes": "^0.2.1",
     "node-fetch": "^3.3.2",
